added: the .csv file that has metadata about audio files
*moved: Model_1.ipynb to mnm/

There are only 40229 texts with corresponding audio file. As opposed to the total 40271. So fix this, I modified the download script to only download texts from the metadata.csv.

--- a/mnm/requirements.txt
+++ b/mnm/requirements.txt
@@ -10,11 +10,14 @@ jupyter-core==4.6.3
 python-dateutil==2.8.1
 requests==2.24.0
 tqdm==4.47.0
+pyrebase
 
 # Handy for work
 numpy==1.19.0
 scikit-learn==0.23.1
 scipy==1.5.1
+torch==1.5.1
+torchvision==0.6.1
 
 # For GPU
 numba==0.48
